Finished the Basic EventInfoActivity
Finished the Basic EventInfoActivity and added some other modifications.

--- a/CampusEventTracker/app/src/main/res/layout/activity_event_info.xml
+++ b/CampusEventTracker/app/src/main/res/layout/activity_event_info.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:text="@string/txtEventInfo_Name"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -31,7 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtEventInfoName" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDispEventName" />
 
     <TextView
         android:id="@+id/txtEventInfoDescription"
@@ -45,7 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtEventInfoDate" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDispEventDate" />
 
     <TextView
         android:id="@+id/txtEventInfoDate"
@@ -57,7 +58,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtEventInfoTime" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDispEventTime" />
 
     <TextView
         android:id="@+id/txtEventInfoTime"
@@ -69,28 +70,29 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtEventInfoLocation" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDispEventLocation" />
 
     <TextView
         android:id="@+id/txtDispEventName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:text="@string/txtEventInfo_default"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/txtEventInfoName"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtEventInfoName" />
 
     <TextView
         android:id="@+id/txtDispEventLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         android:text="@string/txtEventInfo_default"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/txtEventInfoLocation"
-        app:layout_constraintTop_toBottomOf="@+id/txtDispEventName" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtEventInfoLocation" />
 
     <TextView
         android:id="@+id/txtDispEventDescription"
@@ -108,21 +110,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         android:text="@string/txtEventInfo_default"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/txtEventInfoDate"
-        app:layout_constraintTop_toBottomOf="@+id/txtDispEventTime" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtEventInfoDate" />
 
     <TextView
         android:id="@+id/txtDispEventTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         android:text="@string/txtEventInfo_default"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/txtEventInfoTime"
-        app:layout_constraintTop_toBottomOf="@+id/txtDispEventLocation" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtEventInfoTime" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
