--- a/CampusEventTracker/app/src/main/res/layout/events_row_layout.xml
+++ b/CampusEventTracker/app/src/main/res/layout/events_row_layout.xml
@@ -7,21 +7,30 @@
     android:paddingBottom="10dp">
 
     <TextView
-        android:id="@+id/txtEventName"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:id="@+id/txtEventDate"
+        android:layout_width="385sp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="20sp" />
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/txtEventName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/txtEventDescription"
-        android:layout_width="match_parent"
-        android:layout_height="62dp"
-        android:layout_weight="1" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textStyle="italic" />
 
     <Button
         android:id="@+id/btnEventInfo"
-        android:layout_width="match_parent"
+        android:layout_width="385sp"
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
