Implemented Google Maps Functionality
Added a google maps fragment to the app. Does not function properly at the moment.

--- a/CampusEventTracker/app/src/main/res/layout/activity_event_info.xml
+++ b/CampusEventTracker/app/src/main/res/layout/activity_event_info.xml
@@ -127,4 +127,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtEventInfoTime" />
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView2"
+        android:name="com.example.campuseventtracker.MapsFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtDispEventDescription" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
